--- a/trunk/vignettes/trackview_testing.Rmd
+++ b/trunk/vignettes/trackview_testing.Rmd
@@ -9,51 +9,45 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 library(chipVis)
 library(rtracklayer)
+library(TxDb.Hsapiens.BioMart.igis)
 ```
 
 ## R Markdown
 
 This is intended to demonstrate how the chipVis package displays local views.
 ```{r Load Data}
+# Specify parameters
 info_dir <- "~/CARROLL_PR/data/"
 s_file <- paste(info_dir, "samples.txt", sep='')
 p_file <- paste(info_dir, "pairs.txt", sep='')
 fi <- getChipFileInfo(s_file, p_file)
-
-symbol <- "ENO1"
+symbol <- "GREB1"
 org <- "human"
 genome <- "GRCh38"
-mart <- ifelse (genome %in% c("GRCh38","GRCm38"), "igis", "igis2.3")
-dat.exon <- igisExonlist(symbol,org=org, mart=mart)
-
 ```
 
 ```{r Load BigWig}
-range.gene <- GRanges(seqnames=dat.exon[1,"chr"],
-                        ranges=IRanges(start=min(dat.exon$start),
-                                       end=max(dat.exon$end)),
-                        strand=dat.exon[1,"strand"])
-extension <- 50000
-start(range.gene) <- start(range.gene) - extension
-end(range.gene) <- end(range.gene) + extension
-# range.gene <- grAddChr(range.gene)
-cvg <- lapply(fi[2:5, "File.bw"], function(x) import.bw(x, which=range.gene))
-# cvg <- import.bw(fi[2:3, "File.bw"])
-cvg <- GRangesList(cvg)
-names(cvg) <- fi[2:5, "Sample.Name"]
+extension <- 25000
+# Create the range for viewing. Can either specify a symbol or a range
+range.gene <- getViewRange(symbol, org, genome)
+# range.gene <- getViewRange(chr = 3, start=6000, end=80000)
+
+# Extend the region if desired
+range.gene <- extendGRange(range.gene, extension)
+
+# Get the exon list
+full.exon <- chipVis::igisExonlist(range.gene, org=org, genome=genome)
+
+# Get the coverage
+input <- fi[2, 'Sample.Control']
+input_idx <- which(fi$Sample.Name==input)
+idx <- c(2:4, input_idx)
+shortened_names <- c(fi[idx[1:3], "Sample.Name"], "Input")
+cvg <- getCoverageInRange(fi[idx, "File.bw"], range.gene, shortened_names)
 ```
 
 ```{r Basic Track}
-chipVis::plotGeneCoverage(cvg, symbol="ENO1", org="human", genome='GRCh38',
-                          sync = TRUE, extend=extension)
+colors <- c("blue", "firebrick", "darkgreen", "grey")
+chipVis::plotGeneCoverage(cvg, range.gene, sync = TRUE, col=colors,
+                          genome=genome, symbol=symbol, dat.exon=full.exon)
 ```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
