--- a/trunk/vignettes/trackview_testing.Rmd
+++ b/trunk/vignettes/trackview_testing.Rmd
@@ -21,7 +21,7 @@ info_dir <- "~/CARROLL_PR/data/"
 s_file <- paste(info_dir, "samples.txt", sep='')
 p_file <- paste(info_dir, "pairs.txt", sep='')
 fi <- getChipFileInfo(s_file, p_file)
-symbol <- "GREB1"
+symbol <- "NRIP1"
 org <- "human"
 genome <- "GRCh38"
 ```
