--- a/trunk/vignettes/multi_coverage_shiny_testing.Rmd
+++ b/trunk/vignettes/multi_coverage_shiny_testing.Rmd
@@ -7,14 +7,14 @@ runtime: shiny
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
 ## Reading in the Data
 
 Example of reading in data
 
-```{r inputs}
+```{r inputs, warnings = FALSE, message = FALSE, results='hide'}
 library(gChipseq)
 library(TxDb.Mmusculus.BioMart.igis)
 
@@ -35,23 +35,26 @@ peaks <- peaks[!sapply(peaks, is.null)]
 
 merged_peaks <- reduce(do.call(c, peaks))
 
-tss_in_peaks <- subsetByOverlaps(unique_tss, merged_peaks, maxgap = 2500)
+tss_in_peaks <- subsetByOverlaps(unique_tss, merged_peaks, maxgap = 1000)
 
 ```
 
 ## Prepping Data
-```{r bams}
+```{r bams, warnings = FALSE, message = FALSE, results='hide'}
 source('/gnet/is7/workspace/schepa/chipVis/R/coverage_matrix.R')
 BiocParallel::register(BiocParallel::MulticoreParam(4, progressbar = TRUE))
 
 bam_files <- samples$File.bam
 names(bam_files) <- samples$Sample.Name
 
-# cvg_mats <- make_coverage_matrix(inputs = bam_files,
-#                                  ranges = tss_in_peaks,
-#                                  binsize = 50,
-#                                  up = 2500,
-#                                  down = 2500)
+cvg_files <- samples$File.bw
+names(cvg_files) <- samples$Sample.Name
+
+ cvg_mats <- make_coverage_matrix(inputs = bam_files,
+                                  ranges = tss_in_peaks,
+                                  binsize = 50,
+                                  up = 2500,
+                                  down = 2500)
 
 ```
 
@@ -59,14 +62,17 @@ names(bam_files) <- samples$Sample.Name
 ## Embedded Application
 
 
-```{r shiny, echo=FALSE}
+```{r shiny, echo=FALSE, cache = FALSE}
 source('/gnet/is7/workspace/schepa/chipVis/R/multi_coverage_shiny.R')
+source('/gnet/is7/workspace/schepa/chipVis/R/single_coverage_heatmap.R')
+source('/gnet/is7/workspace/schepa/chipVis/R/trackview_functions.R')
 
 multi_coverage_plot(inputs = cvg_mats,#bam_files, 
                     regions = tss_in_peaks, 
                     region_names = tss_in_peaks$names, 
                     up = 2500, 
-                    down = 2500)
+                    down = 2500,
+                    cvg_files = cvg_files)
 
 ```
 
