Pass global kwargs to trackview plotting function
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@193968 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/vignettes/trackview_testing.Rmd
+++ b/trunk/vignettes/trackview_testing.Rmd
@@ -47,7 +47,6 @@ cvg <- getCoverageInRange(fi[idx, "File.bw"], range.gene, shortened_names)
 ```
 
 ```{r Basic Track}
-colors <- c("blue", "firebrick", "darkgreen", "grey")
-chipVis::plotGeneCoverage(cvg, range.gene, sync = TRUE, col=colors,
-                          genome=genome, symbol=symbol, dat.exon=full.exon)
+chipVis::plotGeneCoverage(cvg, range.gene, sync = TRUE, genome=genome, 
+                          symbol=symbol, dat.exon=full.exon)
 ```
