--- a/trunk/vignettes/trackview_testing.Rmd
+++ b/trunk/vignettes/trackview_testing.Rmd
@@ -8,6 +8,7 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(chipVis)
+library(gChipseq)
 library(rtracklayer)
 library(TxDb.Hsapiens.BioMart.igis)
 library(SNPlocs.Hsapiens.dbSNP141.GRCh38)
@@ -22,7 +23,7 @@ info_dir <- "~/CARROLL_PR/data/"
 s_file <- paste(info_dir, "samples.txt", sep='')
 p_file <- paste(info_dir, "pairs.txt", sep='')
 fi <- getChipFileInfo(s_file, p_file)
-symbol <- "NRIP1"
+symbol <- "ENO1"
 org <- "human"
 genome <- "GRCh38"
 ```
@@ -44,10 +45,15 @@ input <- fi[2, 'Sample.Control']
 input_idx <- which(fi$Sample.Name==input)
 idx <- c(2:4, input_idx)
 shortened_names <- c(fi[idx[1:length(idx)-1], "Sample.Name"], "Input")
-cvg <- getCoverageInRange(fi[idx, "File.bw"], range.gene, shortened_names)
+
+# Get scaling factor
+sf <- getScalingFactor(fi[idx,])/1000000
+sf <- sf[2,]
+
+cvg <- getCoverageInRange(fi[idx, "File.bw"], range.gene, shortened_names, sf)
 ```
 
 ```{r Basic Track}
-track_info <- chipVis::plotGeneCoverage(cvg, range.gene, sync = TRUE, genome=genome, 
+track_info <- chipVis::plotGeneCoverage(grl = cvg, range.gene, sync = TRUE, genome=genome, 
                           symbol=symbol, dat.exon=full.exon)
 ```
