--- a/trunk/vignettes/trackview_testing.Rmd
+++ b/trunk/vignettes/trackview_testing.Rmd
@@ -23,7 +23,7 @@ info_dir <- "~/CARROLL_PR/data/"
 s_file <- paste(info_dir, "samples.txt", sep='')
 p_file <- paste(info_dir, "pairs.txt", sep='')
 fi <- getChipFileInfo(s_file, p_file)
-symbol <- "ENO1"
+symbol <- "NRIP1"
 org <- "human"
 genome <- "GRCh38"
 ```
@@ -43,7 +43,7 @@ full.exon <- chipVis::igisExonlist(symbol, org=org, genome=genome)
 # Get the coverage
 input <- fi[2, 'Sample.Control']
 input_idx <- which(fi$Sample.Name==input)
-idx <- c(2:4, input_idx)
+idx <- c(2:5, input_idx)
 shortened_names <- c(fi[idx[1:length(idx)-1], "Sample.Name"], "Input")
 
 # Get scaling factor
