Bugs squashed! Chromosomes for all tracks must be the same or data may not be shown
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@194143 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/vignettes/trackview_testing.Rmd
+++ b/trunk/vignettes/trackview_testing.Rmd
@@ -23,7 +23,7 @@ info_dir <- "~/CARROLL_PR/data/"
 s_file <- paste(info_dir, "samples.txt", sep='')
 p_file <- paste(info_dir, "pairs.txt", sep='')
 fi <- getChipFileInfo(s_file, p_file)
-symbol <- "NRIP1"
+symbol <- "ENO1"
 org <- "human"
 genome <- "GRCh38"
 ```
