--- a/trunk/vignettes/multi_coverage_shiny_testing.Rmd
+++ b/trunk/vignettes/multi_coverage_shiny_testing.Rmd
@@ -49,7 +49,7 @@ tss_in_peaks <- subsetByOverlaps(unique_tss, merged_peaks, maxgap = 1000)
 
 ## Prepping Data
 ```{r bams, warnings = FALSE, message = FALSE, results='hide'}
-source('/gnet/is7/workspace/schepa/chipVis/R/coverage_matrix.R')
+#source('/gnet/is7/workspace/schepa/chipVis/R/coverage_matrix.R')
 
 bam_files <- samples_exp$File.bam
 names(bam_files) <- samples$Genotype
@@ -57,63 +57,60 @@ names(bam_files) <- samples$Genotype
 cvg_files <- samples_exp$File.bw
 names(cvg_files) <- samples$Genotype
 
- cvg_mats <- make_coverage_matrix(inputs = bam_files,
+mRNF2 <- grep("mRNF2", samples$Genotype)
+
+cvg_mats <- make_coverage_matrix(inputs = bam_files[mRNF2],
                                   ranges = tss_in_peaks,
                                   binsize = 50,
                                   up = 2500,
                                   down = 2500)
 
-```
-
-
-
-## Multi-coverage Application
-
-
-```{r shiny1, echo=FALSE, cache = FALSE, message = FALSE}
-
-#source('/gnet/is7/workspace/schepa/chipVis/R/multi_coverage_shiny.R')
-#source('/gnet/is7/workspace/schepa/chipVis/R/single_coverage_heatmap.R')
-#source('/gnet/is7/workspace/schepa/chipVis/R/trackview_functions.R')
-
-
-multi_coverage_plot(inputs = cvg_mats,#bam_files, 
-                    regions = tss_in_peaks, 
-                    region_names = tss_in_peaks$names, 
-                    cvg_files = cvg_files)
-
-```
-## Single coverage Application
-
-
-```{r shiny2, echo=FALSE, cache = FALSE, message = FALSE}
-
-#source('/gnet/is7/workspace/schepa/chipVis/R/multi_coverage_shiny.R')
-#source('/gnet/is7/workspace/schepa/chipVis/R/single_coverage_heatmap.R')
-#source('/gnet/is7/workspace/schepa/chipVis/R/trackview_functions.R')
-
-
-single_coverage_plot(input = cvg_mats[[1]],#bam_files, 
-                    regions = tss_in_peaks, 
-                    region_names = tss_in_peaks$names, 
-                    cvg_files = cvg_files)
+scale_factors <- getScalingFactor(file_info = samples_exp)
 
 ```
 
-## Single coverage Application with fewer tracks
+## Single coverage shiny app
 
 
 ```{r shiny3, echo=FALSE, cache = FALSE, message = FALSE}
 
-#source('/gnet/is7/workspace/schepa/chipVis/R/multi_coverage_shiny.R')
-#source('/gnet/is7/workspace/schepa/chipVis/R/single_coverage_heatmap.R')
-#source('/gnet/is7/workspace/schepa/chipVis/R/trackview_functions.R')
+single_coverage_plot(input = cvg_mats[[1]][1:500,],#bam_files, 
+                    regions = tss_in_peaks[1:500], 
+                    region_names = tss_in_peaks$names[1:500], 
+                    cvg_files = cvg_files[mRNF2])
+
+```
+
+## Multi-coverage shiny app
 
 
-single_coverage_plot(input = cvg_mats[[1]],#bam_files, 
-                    regions = tss_in_peaks, 
-                    region_names = tss_in_peaks$names, 
-                    cvg_files = cvg_files[1:10])
+```{r shiny1, echo=FALSE, cache = FALSE, message = FALSE}
+ 
+ multi_coverage_plot(inputs = cvg_mats, 
+                     regions = tss_in_peaks, 
+                     region_names = tss_in_peaks$names, 
+                     cvg_files = cvg_files[mRNF2],
+                     aggregate_normalization = "scalar",
+                     scaling_factor = scale_factors[2,mRNF2])
+ 
+```
 
+# Simple RNA-seq Heatmap
+
+```{r simple_heatmap, message = FALSE}
+library(plotly)
+library(Biobase)
+
+e <- readRDS("~/workspace/BAP1_Data/esetRPKM.RDS")
+
+e <- e[which(substr(fData(e)$chr,1,3) == "chr"),]
+fData(e)$chr <- sapply(fData(e)$chr, function(x) substr(x, 4, nchar(x)))
+
+#source("~/workspace/chipVis/R/signal_heatmap.R")
+#source("~/workspace/chipVis/R/plot_utils.R")
+
+p1 = cluster_heatmap(exprs(e)[1:500,], y = as.character(fData(e)$symbol[1:500]), x = as.character(pData(e)$TREATMENT_NAME), row_order = "kmeans", col_order = "hclust", row_k = 8, col_k = 4, col_anno = list(Genotype = list(data = matrix(as.numeric(as.factor(pData(e)$TREATMENT_NAME)),nrow = 1), colorscale = chipVis:::dcolorscale(4))))$plot() %>% layout(margin = list(b= 100))
+
+p1
 ```
 
