fixed bug in make_main_hm
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@194291 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/vignettes/iheatmap.Rmd
+++ b/trunk/vignettes/iheatmap.Rmd
@@ -8,9 +8,10 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE)
 ```
 
 ```{r}
-source("~/workspace/experimental/iheatmap.R")
-source("~/workspace/chipVis/R/plot_utils.R")
+#source("~/workspace/experimental/iheatmap.R")
+#source("~/workspace/chipVis/R/plot_utils.R")
 #library(dplyr)
+library(chipVis)
 library(plotly)
 ```
 
