fixes to take into account name changes for some functions
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@194620 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/vignettes/multi_coverage_shiny_testing.Rmd
+++ b/trunk/vignettes/multi_coverage_shiny_testing.Rmd
@@ -65,7 +65,7 @@ cvg_mats <- make_coverage_matrix(inputs = bam_files[mRNF2],
                                   up = 2500,
                                   down = 2500)
 
-scale_factors <- getScalingFactor(file_info = samples_exp)
+scale_factors <- get_scaling_factor(file_info = samples_exp)
 
 ```
 
