Minor bug fixes for browser_ly. Function abstraction for plot_track_view
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@195490 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/vignettes/browser_ly_testing.Rmd
+++ b/trunk/vignettes/browser_ly_testing.Rmd
@@ -33,7 +33,7 @@ tx_data <- load_tx_data(TxDb.Mmusculus.BioMart.igis)
 ```
 
 ```{r}
-range.gene = GenomicRanges::GRanges("2",IRanges(151450000, 151500922))
+range.gene = GenomicRanges::GRanges("3",IRanges(6000, 10000))
 # Get the coverage
 input <- fi[2, 'Sample.Control']
 input_idx <- which(fi$Sample.Name==input)
